--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^1.1.4",
+    "ethers": "^5.6.9",
+    "magic-sdk": "^9.0.0",
+    "moment": "^2.29.4",
+    "moralis": "^1.11.0",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-moralis": "^1.4.0",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-spinners": "^0.13.4",
+    "web3uikit": "^0.1.170"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
